<resources>
    <string name="app_name" translatable="false">Food Fusion</string>
    <string name="loading_something_hint">Loading…</string>
    <string name="overview_toolbar_title">Overview</string>
    <string name="add_something_button_hint">Add</string>
    <string name="create_something_button_hint">New</string>
    <string name="remove_something_button_hint">Remove</string>
    <string name="delete_something_button_hint">Delete</string>

    <!-- Reserved for EmptyStates -->
    <string name="connection_issue_title">No Internet Connection</string>
    <string name="connection_issue_message">You\'re offline. Check your connection and try again.</string>
    <string name="general_issue_title">Oops! Something Went Wrong</string>
    <string name="general_issue_message">We ran into an issue. Try again or restart the app.</string>
    <string name="server_issue_title">Server is Unreachable</string>
    <string name="server_issue_message">We could’t connect to the server. Please try again later.</string>
    <string name="data_fetching_issue_title">Data Fetching Error</string>
    <string name="data_fetching_issue_message">We could’t connect to the server. Please try again later.</string>
    <string name="not_available_title">Not Available</string>
    <string name="feature_not_implemented_message">This feature is not implemented yet!</string>
    <string name="ok_button_hint" translatable="false">OK</string>
    <string name="no_addresses_available_message">No addresses available</string>
    <string name="addresses_title">Addresses</string>
    <string name="address_title">Address</string>
    <string name="phone_title">Phone</string>
    <string name="no_phones_available_message">No phones available</string>
    <string name="phones_title">Phones</string>
    <string name="no_menus_available_message">No menus available</string>
    <string name="menus_title">Menus</string>
    <string name="no_logo_available_message">No logo available</string>
    <string name="logo_title">Logo</string>
    <string name="logos_title">Logos</string>
    <string name="type_label">Type</string>
    <string name="description_label">Description</string>
    <string name="name_label">Name</string>
    <string name="deleted_at_title">Deactivated At</string>
    <string name="updated_at_title">Updated At</string>
    <string name="created_at_title">Created At</string>
    <string name="deleted_title">Deleted</string>
    <string name="establishment_title">Restaurant</string>
    <string name="contact_title">Contact</string>
    <string name="contacts_title">Contacts</string>
    <string name="location_title">Location</string>
    <string name="establishment_message">Manage general information about the restaurant, including name, description, and opening hours.</string>
    <string name="menus_message">Create, organize, and update the restaurant\'s menus and items.</string>
    <string name="contact_message">Register and maintain contact phone numbers for the restaurant.</string>
    <string name="location_message">Add and manage restaurant location details for customers.</string>
    <string name="see_something_button_hint">See</string>
    <string name="no_data">No Data</string>
    <string name="establishment_type_restaurant">Restaurant</string>
    <string name="server_is_unreachable_title">Server is Unreachable</string>
    <string name="server_is_unreachable_message">We could’t connect to the server. Please try again later.</string>
    <string name="data_not_available_title">Data Not Available</string>
    <string name="data_not_available_message">Something went wrong while loading. Pull down to refresh.</string>
    <string name="no_items_found_title">No Items Found</string>
    <string name="no_items_found_message">It looks like there\'s nothing here yet. Check back later!</string>
    <string name="location_unavailable_title">Location Unavailable</string>
    <string name="location_unavailable_message">We could’t access your location. Please enable it in settings.</string>
    <string name="general_title">General</string>
    <string name="localization_title">Localization</string>

    <!-- Tabs -->
    <string name="profile">Profile</string>
    <string name="menus">Menus</string>
    <string name="upload_logo_message_hint">Restaurant Logo Upload (JPG, PNG, or SVG)</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="save_button_hint">Save</string>
    <string name="reload_something_button_hint">Reload</string>
    <string name="logo_upload_message"><b>Unleash your creativity!</b> Upload the logo that represents your restaurant\'s unique vibe. — just make it shine!</string>
    <string name="general_info_message">Let’s bring your restaurant to life! Fill in the general details like the name, type, and a description that captures the essence of your business.</string>
    <string name="restaurant_created_successfully_title">Restaurant Created Successfully</string>
    <string name="restaurant_created_successfully_message">Your restaurant has been created and is ready to be managed.</string>
    <string name="restaurant_creation_failed_title">Restaurant Creation Failed</string>
    <string name="restaurant_creation_failed_message">Something went wrong during the creation process. Please check the information and try again.</string>
    <string name="name_is_required_message">Restaurant\'s name is required</string>
    <string name="cuisine_type_is_required_message">Restaurant\'s type is required</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this restaurant?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete_menu_hint">Delete</string>
    <string name="context_menu_title">Select an action</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="settings_menu_option">Settings</string>

    <string name="finance_title">Finance</string>
    <string name="finance_description">Track the key financial indicators of your business, such as revenue, expenses, and profitability, to ensure efficient and profitable management.</string>
    <string name="clients_title">Clients</string>
    <string name="clients_message">Analyze customer behavior and satisfaction, driving retention, acquisition, and engagement.</string>
    <string name="operational_title">Operational</string>
    <string name="operational_message">Monitor operational metrics that impact your company’s efficiency and productivity, optimizing processes and resources.</string>
    <string name="others_title">Others</string>
    <string name="others_message">Additional metrics and information relevant to managing and making strategic decisions for your business.</string>
    <string name="average_check_title">Average Check</string>
    <string name="profit_margin_title">Profit Margin</string>
    <string name="net_profit_title">Cost of Goods Sold (COGS)</string>
    <string name="revenue_per_customer">Revenue per Customer</string>
    <string name="return_of_investment_title">Return of Investment (ROI)</string>
    <string name="occupancy_rate_title">Occupancy Rate</string>
    <string name="service_time_title">Service Time</string>
    <string name="kitchen_efficiency_title">Kitchen Efficiency</string>
    <string name="inventory_turnover_title">Inventory Turnover</string>
    <string name="food_waste_title">Food Waste</string>
    <string name="energy_efficiency_title">Energy Efficiency</string>
    <string name="digital_marketing_title">Digital Marketing</string>
    <string name="net_promoter_score_title">Net Promoter Score (NPS)</string>
    <string name="customer_retention_rate_title">Customer Return Rate</string>
    <string name="cost_of_goods_sold_title">Cost of Goods Sold (COGS)</string>
    <string name="customer_acquisition_rate_title">Customer Retention Rate</string>
    <string name="churn_rate_title">Churn Rate</string>
    <string name="customer_lifetime_value_title">Customer Lifetime Value</string>
    <string name="details_title">Details</string>
    <string name="restaurant_status_hint">Restaurant Status</string>
    <string name="active_hint">Active</string>
    <string name="erased_hint">Deactivated</string>
    <string name="erase">Deactivate</string>
    <string name="recover">Activate</string>
    <string name="restaurant_message">Your Restaurant is %s. Wish %s?</string>
    <string name="email_title">E-mail</string>
    <string name="metrics_title">Metrics</string>
    <string name="history_title">History</string>
    <string name="history_message">View the history of restaurant records, including creation, updates, and deletions, with timestamps and key details for tracking changes.</string>
    <string name="deactivate_restaurant_title">Deactivate Restaurant</string>
    <string name="service_times">Service Times</string>
    <string name="backdrop_title" translatable="false">Backdrop</string>
    <string name="visual_title">Visual Identity</string>
    <string name="visual_message">Customize the Logo and Backdrop to create an engaging and visually aligned experience for your restaurant’s customers.</string>
    <string name="choose_something_hint">Choose</string>
    <string name="choose_image_tooltip">Choose New Image</string>
    <string name="upload_logo_backdrop_message">Logo: 500x500 pixels (PNG or JPEG format, transparent background recommended). Backdrop: 1920x1080 pixels (PNG or JPEG format, high quality).</string>
    <string name="crop_image_hint">Crop Image</string>
    <string name="logo_backdrop_title" translatable="false">Logo &amp; Backdrop</string>
    <string name="logo_backdrop_message">Visual elements that define your brand\'s identity and set the scene.</string>
    <string name="new_service_time">Service Time</string>

    <string name="cuisine_italian">Italian</string>
    <string name="cuisine_japanese">Japanese</string>
    <string name="cuisine_thai">Thai</string>
    <string name="cuisine_chinese">Chinese</string>
    <string name="cuisine_mexican">Mexican</string>
    <string name="cuisine_indian">Indian</string>
    <string name="cuisine_american">American</string>
    <string name="cuisine_french">French</string>
    <string name="cuisine_brazilian">Brazilian</string>
    <string name="cuisine_mediterranean">Mediterranean</string>
    <string name="cuisine_spanish">Spanish</string>
    <string name="cuisine_greek">Greek</string>
    <string name="cuisine_korean">Korean</string>
    <string name="cuisine_vietnamese">Vietnamese</string>
    <string name="cuisine_turkish">Turkish</string>
    <string name="cuisine_arabic">Arabic</string>
    <string name="see_service_times">See Service Times</string>
    <string name="deactivate">Deactivate</string>
    <string name="activated">Active</string>
    <string name="deactivated">Deactivated</string>
    <string name="activate">Activate</string>
    <string name="panel">Panel</string>

</resources>